Fixed the horizontal scroll

--- a/src/components/Header/Details/details.css
+++ b/src/components/Header/Details/details.css
@@ -3,7 +3,7 @@
     /* border-bottom:1px solid rgb(218, 218, 218); */
     display:flex;
     margin-top:-0.5%;
-    margin-left:-0.5%;
+    /* margin-left:-0.5%; */
     height:55px;
     /* height:6vh; */
     gap:2%;
