--- a/src/components/Header/Preview/preview.css
+++ b/src/components/Header/Preview/preview.css
@@ -1,8 +1,8 @@
 .preview{
     height:270px;
     background-size: cover;
-    width:110%;
-    margin-left:-1.5%;
+    width:100%;
+    /* margin-left:-1.5%; */
     display:flex;
     flex-direction:column;
     justify-content: center;
